[gd_scene load_steps=38 format=2]

[ext_resource path="res://Asset/Font/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Asset/Ship/PowerUp SpriteSheet.png" type="Texture" id=2]
[ext_resource path="res://Asset/HUD/CircleProgressBarPixelArt.png" type="Texture" id=3]
[ext_resource path="res://Script/HUD or UI/HUD.gd" type="Script" id=4]
[ext_resource path="res://Asset/HUD/CircleProgressBarOutlinePixelArt.png" type="Texture" id=5]
[ext_resource path="res://Asset/Audio/Sfx/Hit Hurt2.ogg" type="AudioStream" id=6]
[ext_resource path="res://Asset/Audio/Sfx/SFX_UI_MenuSelections.ogg" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=22]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 5
extra_spacing_bottom = 5
extra_spacing_space = 5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 4
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.219608, 0.219608, 0.219608, 0.196078 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="Theme" id=2]
Button/colors/font_color_focus = Color( 1, 0.603922, 0.286275, 1 )
Button/colors/font_color_hover = Color( 1, 0.447059, 0, 1 )
Button/colors/font_color_pressed = Color( 1, 0.2, 0, 1 )
Button/fonts/font = SubResource( 22 )
Label/fonts/font = SubResource( 5 )
ProgressBar/fonts/font = null
ProgressBar/styles/bg = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.784314, 0, 0, 0.490196 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.631373, 0.631373, 0.631373, 0.490196 )

[sub_resource type="DynamicFont" id=6]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
outline_size = 2
outline_color = Color( 0.172549, 0.172549, 0.172549, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Gradient" id=8]
colors = PoolColorArray( 1, 0.140625, 0, 1, 0.992188, 1, 0, 1 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 0.40184 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
emission_shape = 5
emission_ring_radius = 22.0
emission_ring_inner_radius = 15.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -40.0
angle = 45.0
scale = 3.0
scale_curve = SubResource( 11 )
color_ramp = SubResource( 9 )

[sub_resource type="Gradient" id=13]
colors = PoolColorArray( 0.992188, 1, 0, 1, 1, 0.140625, 0, 1 )

[sub_resource type="GradientTexture" id=14]
gradient = SubResource( 13 )

[sub_resource type="Curve" id=15]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.678, 0.598159 ), -2.30061, -2.30061, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=16]
curve = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=17]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 45.0
angle = 45.0
scale = 5.0
scale_curve = SubResource( 16 )
color_ramp = SubResource( 14 )

[sub_resource type="DynamicFont" id=24]
size = 4
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=35]
outline_size = 1
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Curve" id=28]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=29]
curve = SubResource( 28 )

[sub_resource type="ParticlesMaterial" id=30]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 45.0
scale = 5.0
scale_curve = SubResource( 29 )
color_ramp = SubResource( 14 )

[sub_resource type="DynamicFont" id=33]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=34]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=27]
resource_name = "GetPowUp"
tracks/0/type = "value"
tracks/0/path = NodePath("MainContainer/PowUP/Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 46 ), Vector2( 0, 46 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainContainer/PowUP/Sprite:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 3, 3 ), Vector2( 3, 3 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainContainer/PowUP/BoomParticle:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=25]
resource_name = "LevelUp1"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainContainer/LevelProgressBar:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ), Vector2( 218, 116 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "LevelUp2"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("MainContainer/StopButton:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainContainer/PowUP/Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainContainer/PowUpDescription:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MainContainer/LevelProgressBar/Label/Particles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MainContainer/LevelProgressBar/Label/Particles2D2:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MainContainer/GetPowUp:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=26]
resource_name = "LevelUp3"
tracks/0/type = "value"
tracks/0/path = NodePath("MainContainer/StopButton:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainContainer/PowUP/Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MainContainer/LevelProgressBar:rect_position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 218, 116 ), Vector2( 3, 3 ) ]
}

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MainContainer/StopButton:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainContainer/PowUP/Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainContainer/PowUpDescription:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MainContainer/PowUP/Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MainContainer/PowUP/Sprite:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MainContainer/PowUP/BoomParticle:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ColorRect:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("MainContainer/LevelProgressBar:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("MainContainer/LevelProgressBar/Label/Particles2D:emitting")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("MainContainer/LevelProgressBar/Label/Particles2D2:emitting")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("MainContainer/GetPowUp:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="HUD" type="CanvasLayer" groups=["HUD"]]
layer = 0
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.588235 )

[node name="MainContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )

[node name="HealtBar" type="ProgressBar" parent="MainContainer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -19.0
margin_right = 50.0
margin_bottom = -11.0
custom_styles/fg = SubResource( 3 )
max_value = 0.0
step = 1.0
percent_visible = false

[node name="Label" type="Label" parent="MainContainer/HealtBar"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "0/0"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="ShieldBar" type="ProgressBar" parent="MainContainer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -25.0
margin_top = -10.0
margin_right = 25.0
margin_bottom = -2.0
custom_styles/fg = SubResource( 4 )
max_value = 0.0
step = 1.0
percent_visible = false

[node name="Label" type="Label" parent="MainContainer/ShieldBar"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "0/0"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="FpsCounter" type="Label" parent="MainContainer"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -71.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 6 )
text = "50 FPS"
align = 2
valign = 1

[node name="LevelProgressBar" type="TextureProgress" parent="MainContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 48.0
margin_bottom = 48.0
max_value = 80.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 3 )
fill_mode = 4
tint_under = Color( 0, 0, 0, 0.588235 )
tint_over = Color( 0, 0, 0, 1 )
tint_progress = Color( 1, 0.568627, 0, 1 )
nine_patch_stretch = true

[node name="Label" type="Label" parent="MainContainer/LevelProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 7 )
text = "1"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Particles2D" type="Particles2D" parent="MainContainer/LevelProgressBar/Label"]
pause_mode = 2
position = Vector2( 22, 22 )
emitting = false
amount = 300
one_shot = true
explosiveness = 0.68
visibility_rect = Rect2( -65.1727, -65.1606, 130.068, 130.228 )
process_material = SubResource( 12 )

[node name="Particles2D2" type="Particles2D" parent="MainContainer/LevelProgressBar/Label"]
pause_mode = 2
position = Vector2( 22, 22 )
emitting = false
amount = 300
one_shot = true
speed_scale = 2.0
explosiveness = 0.68
visibility_rect = Rect2( -52.1982, -52.019, 103.891, 103.905 )
process_material = SubResource( 17 )

[node name="PlayerSkillCountainer" type="VBoxContainer" parent="MainContainer"]
margin_left = 9.0
margin_top = 52.0
margin_right = 41.0
margin_bottom = 120.0
size_flags_horizontal = 0
size_flags_stretch_ratio = 20.0

[node name="StopButton" type="Button" parent="MainContainer"]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -33.0
margin_top = 48.0
margin_right = 35.0
margin_bottom = 78.0
focus_mode = 0
enabled_focus_mode = 0
text = "Stop"
flat = true

[node name="PowUpDescription" type="Label" parent="MainContainer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -174.0
margin_top = -77.0
margin_right = 174.0
margin_bottom = -54.0
custom_fonts/font = SubResource( 24 )
text = "Increse Max HP"
align = 1

[node name="GetPowUp" type="Label" parent="MainContainer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -174.0
margin_top = -115.0
margin_right = 174.0
margin_bottom = -94.0
custom_colors/font_color = Color( 1, 0.72549, 0, 1 )
custom_fonts/font = SubResource( 35 )
text = "Get Bonus!"
align = 1

[node name="PowUP" type="Control" parent="MainContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = -43.0
margin_bottom = -43.0

[node name="BoomParticle" type="Particles2D" parent="MainContainer/PowUP"]
pause_mode = 2
position = Vector2( 0, 46 )
scale = Vector2( 2, 2 )
emitting = false
amount = 200
one_shot = true
speed_scale = 2.0
explosiveness = 0.68
visibility_rect = Rect2( -52.1982, -52.019, 103.891, 103.905 )
process_material = SubResource( 30 )

[node name="Sprite" type="Sprite" parent="MainContainer/PowUP"]
visible = false
texture = ExtResource( 2 )
hframes = 2
vframes = 2
frame = 3

[node name="RestoreShield_Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Pause" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="Resume" type="Button" parent="Pause"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -54.0
margin_top = -23.0
margin_right = 54.0
margin_bottom = -1.0
focus_mode = 0
custom_colors/font_color_focus = Color( 0.639216, 0.639216, 0.639216, 1 )
custom_colors/font_color_hover = Color( 0.639216, 0.639216, 0.639216, 1 )
custom_fonts/font = SubResource( 33 )
enabled_focus_mode = 0
text = "Resume"
flat = true

[node name="BackToTittle" type="Button" parent="Pause"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.0
margin_top = 15.0
margin_right = 62.0
margin_bottom = 29.0
focus_mode = 0
custom_colors/font_color_focus = Color( 0.639216, 0.639216, 0.639216, 1 )
custom_colors/font_color_hover = Color( 0.639216, 0.639216, 0.639216, 1 )
custom_fonts/font = SubResource( 34 )
enabled_focus_mode = 0
text = "Back to tittle"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/GetPowUp = SubResource( 27 )
anims/LevelUp1 = SubResource( 25 )
anims/LevelUp2 = SubResource( 18 )
anims/LevelUp3 = SubResource( 26 )
anims/RESET = SubResource( 19 )

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="PouUpSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 7 )
volume_db = -10.0

[connection signal="value_changed" from="MainContainer/LevelProgressBar" to="." method="_on_LevelProgressBar_value_changed"]
[connection signal="pressed" from="MainContainer/StopButton" to="." method="_on_StopButton_pressed"]
[connection signal="timeout" from="RestoreShield_Timer" to="." method="_on_RestoreShield_Timer_timeout"]
[connection signal="pressed" from="Pause/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Pause/BackToTittle" to="." method="_on_BackToTittle_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
